--- a/mobile.css
+++ b/mobile.css
@@ -67,6 +67,9 @@ header .wrap nav .gnb{
 header .wrap nav .box{
     margin-bottom: 20px;
 }
+header .wrap nav .box:last-child{
+    margin-bottom: 0;
+}
 header .wrap nav .util{
     font-size: 14px;
     padding: 10px;
