--- a/desktop.css
+++ b/desktop.css
@@ -38,28 +38,19 @@ header .wrap nav{
 }
 header .wrap nav .gnb{
     display: flex;
-    margin-left: 20px;
     font-size: 14px;
 }
 header .wrap nav .gnb .box{
     margin-bottom: 0px;
 }
 header .wrap nav .box:first-child{font-size: inherit;}
-header .wrap nav .gnb .box{
-    padding: 5px;
-}
-header .wrap nav .gnb .box a{
-    padding: 10px;
-}
 header .wrap nav .gnb img{display: none;}
 header .wrap nav .util{
     font-size: 0;
-    padding: 5px;
     margin-top: 0;
 }
 header .wrap nav .util a{
-    padding: 10px;
-    display: inline-block;
+    display: inline;
 }
 header .wrap nav .util img{
     height: 20px;
