--- a/mobile.css
+++ b/mobile.css
@@ -10,6 +10,7 @@ button{background-color: rgba(0,0,0,0); border: 0;}
     overflow: hidden;
     max-width: 1920px;
     margin: 0 auto;
+    min-width: 320px;
 }
 .tab{display: none;}
 .pc{display: none;}
